--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,11 @@
+add_subdirectory(TestData)
 set(TARGET_NAME UnitTests)
 
 file(GLOB_RECURSE sources *.cpp *.h *.hpp)
 
 add_executable(${TARGET_NAME} ${sources})
 target_link_libraries(${TARGET_NAME} PRIVATE project_options project_warnings
-        GenericCSVParserLib GTest::GTest Boost::headers)
+        GenericCSVParserLib GTest::GTest Boost::headers TestData::TestData)
 # add Source directory to enable testing of internal implementations
 target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/Source)
 
